# Janus-Agent

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  OPEN_SOURCE_AUDIT_SUMMARY.md  README.md  SECURITY.md  SECURITY_SUMMARY.md  config.ini.example  conftest.py  mypy.ini  pyproject.toml  pytest.ini  requirements-llm.in  requirements-llm.txt  requirements-test.txt  requirements-vision.in  requirements-vision.txt  requirements.in  requirements.txt  run_tests.py  setup.py
apps/: __init__.py
apps/cli/: __init__.py  main.py
artifacts/: final_certification_report.json  janus_overlay_position.json  verification_report.json
artifacts/calibration_profiles/: user_auto.json  user_fr.json
docs/: README.md
docs/architecture/: 00-GETTING-STARTED.md  01-complete-system-architecture.md  02-unified-pipeline.md  03-llm-first-principle.md  04-agent-architecture.md  05-data-flow.md  06-module-registry.md  07-semantic-gatekeeper.md  08-reasoner-v4-think-first.md  09-system-context-grounding.md  10-missing-info-feedback.md  11-generic-tooling-standardization.md  12-smart-self-healing.md  13-dynamic-react-loop.md  14-action-coordinator.md  15-janus-agent-api.md  15-strict-action-contract.md  16-prompt-cleanup-audit-004.md  17-memory-engine.md  18-platform-bridges.md  19-system-bridge.md  20-async-execution-optimization.md  21-smart-clipboard.md  22-microsoft-365-integration.md  23-salesforce-crm-integration.md  24-messaging-integration.md  25-speech-to-text-stt.md  26-text-to-speech-tts.md  27-proactive-vision-integration.md  28-skill-caching.md  29-burst-ooda-mode.md  30-hal-consolidation-adr.md  31-runtime-ssot-ooda-adr.md  32-arch-002-unified-llm-stack.md  ARCH-003-strict-json-validation.md  ARCH-004-canonical-system-state.md  ARCHITECTURE_AGENTIQUE.md  ARCHITECTURE_AGENTIQUE_SUMMARY.md  MIGRATION_COMPLETE.md  PERF-001-observation-budget.md  (+3 more)
docs/developer/: 00-quick-start.md  01-global-architecture.md  02-development-environment.md  03-core-modules.md  04-contribution-guide.md  05-security-and-sandbox.md  06-deployment-and-packaging.md  07-uv-package-management.md  08-binary-distribution.md  09-vision-element-id-support.md  10-screenshot-backend.md  CONVERSATION_MODE_GUIDE.md  LEGACY_API_REMOVAL.md  OMNIPARSER_MIGRATION.md  README.md  SSOT.md  TICKET-4-IMPLEMENTATION.md  safety-001-unified-validation.md
docs/platform/: windows-bridge-guide.md
docs/project/: BASELINE_TESTS_USAGE.md  CHANGELOG.md  CONTRIBUTING.md  DEPENDENCIES.md  FEATURES_AUDIT.md  README.md  RELEASE_PROCESS.md  SECURITY_GUIDELINES.md  TESTING_COMPREHENSIVE.md  TESTING_GUIDE.md
docs/user/: 01-introduction.md  02-installation.md  03-getting-started.md  04-use-cases.md  05-personalization.md  06-faq-troubleshooting.md  07-wake-word-guide.md  08-wake-word-training.md  09-voice-fingerprinting.md  10-crash-reporting.md  11-deep-links.md  12-task-scheduler.md  13-database-upgrade-guide.md  README.md  battery-mode.md  microsoft-365-setup.md  mini-screenshot-overlay.md  salesforce-crm-setup.md
docs/workflows/: README.md
examples/: benchmark_accessibility_performance.py  benchmark_vision_models.py  benchmark_vision_performance.py  chat_overlay_demo.py  demo_dynamic_memory_pipeline.py  demo_learning_integration.py  demo_trace_recorder.py  example_accessibility.py  example_agent_migration.py  example_bridge_accessibility_integration.py  example_burst_ooda.py  example_context_ranker.py  example_conversation_mode.py  example_deterministic_pipeline.py  example_hybrid_llm.py  example_i18n_demo.py  example_janus_agent.py  example_light_vision_mac05.py  example_linux_bridge.py  example_llm_providers.py  example_memory_engine.py  example_multi_module_plan.py  example_multi_session_memory.py  example_omniparser_ui_detection.py  example_p2_features.py  example_p2_standalone.py  example_performance_optimization.py  example_result_types.py  example_salesforce_crm.py  example_streaming_stt.py  example_streaming_with_ui.py  example_system_bridge.py  example_ticket3_structured_reasoning.py  example_ticket5_error_recovery.py  example_ticket_a6_features.py  example_tts_integration.py  example_tts_mac03.py  example_ui_components.py  example_unified_memory.py  example_unified_pipeline.py  (+15 more)
experiments/demos/: demo_migration.py  demo_tool_rag.py  download_wakeword_models.py
experiments/manual_tests/: test_router_manual.py  test_semantic_manual.py
experiments/ui/: UI_MOCKUP.py
janus/: __init__.py  constants.py  exceptions.py
janus/ai/: __init__.py
janus/app/: __init__.py  initialization.py
janus/capabilities/: __init__.py
scripts/: benchmark_performance.py  check_compatibility.sh  check_magic_strings.py  clean.sh  compare_providers.py  create_dmg.sh  demo_model_paths.py  download_models.sh  migrate_to_memory_engine.py  replay_session.py  run_evals.py  sign_and_notarize.sh  test_compatibility.py  test_model_paths.py  test_models_config.py  train_wake_word.py  verify-ci-disabled.sh  verify_refactor_b.py  view_logs.sh
tests/: TEST_MIGRATION_GUIDE.md  __init__.py  test_accessibility.py  test_accessibility_fastpath.py  test_action_coordinator.py  test_action_coordinator_burst.py  test_action_history.py  test_action_loop_detection.py  test_action_validator.py  test_agent_architecture_integration.py  test_agent_decorator.py  test_agent_discovery.py  test_applescript_executor.py  test_arch_001_decide_next_action.py  test_arch_002_llm_instrumentation.py  test_arch_003_legacy_removed.py  test_arch_003_ooda_loop.py  test_arch_004_system_state.py  test_arch_007_ooda_scenarios.py  test_async_vision_monitor_integration.py  test_async_vision_monitor_latest_state.py  test_atomic_agents_basic.py  test_audio_logger.py  test_battery_mode.py  test_battery_monitor_unit.py  test_browser_agent_bugs.py  test_browser_reader_mode.py  test_browser_search_planning.py  test_burst_ooda_mode.py  test_cache.py  test_calendar_provider.py  test_calibration_manager.py  test_circuit_breaker.py  test_clipboard.py  test_command_worker.py  test_compensation_manager.py  test_components_manual.py  test_config_flag_integration.py  test_config_manager.py  test_config_ui.py  (+240 more)
(+323 files in other folders)
